# chrpp_behavior

./: .gitignore  CMakeLists.txt  LICENSE  README.md
chrppc/: CMakeLists.txt  chrppc.cpp  chrppc_parse_build.hpp  common.hh  constants.in.hh  dependency_graph.cpp  dependency_graph.hh  notes.txt  parse_error.hh
chrppc/ast/: body.cpp  body.hh  expression.cpp  expression.hh  occ_rule.cpp  program.cpp  program.hh  rule.cpp  rule.hh
chrppc/parser/: actions.hpp  ast_body_builder.hpp  ast_expression_builder.hpp  ast_program_builder.hpp  ast_rule_builder.hpp  chr_body_grammar.hpp  chr_body_internal.hpp  chr_grammar.hpp  errors.hpp  expression_grammar.hpp  expression_internal.hpp  grammar.hpp  reserved_keywords.hh
chrppc/visitor/: body.hh  body_apply.cpp  body_empty.cpp  body_expression_apply.cpp  body_full_print.cpp  body_print.cpp  expression.hh  expression_apply.cpp  expression_check.cpp  expression_print.cpp  expression_print_noparent.cpp  occ_rule.hh  occ_rule_guard_reorder.cpp  occ_rule_head_reorder.cpp  occ_rule_print.cpp  occ_rule_update_constraint_store_indexes.cpp  program.hh  program_build_occ_rules.cpp  program_late_storage.cpp  program_never_stored.cpp  program_print.cpp  program_set_all_persistent.cpp  rule.hh  rule_dependency_graph.cpp  rule_full_print.cpp  rule_print.cpp
chrppc/visitor/abstract_code/: body_abstract_code.cpp  occ_rule_abstract_code.cpp  program_abstract_code.cpp
chrppc/visitor/cpp_code/: body_cpp_code.cpp  expression_cpp_code.cpp  occ_rule_cpp_code.cpp  program_cpp_code.cpp
examples/: CMakeLists.txt  behavior.chrpp
misc/: CMakeLists.txt  chrpp_extract_files.cpp
runtime/: backtrack.hh  bt_interval.hh  bt_interval.hpp  bt_list.hh  bt_list.hpp  chrpp.in.hh  constraint_store.hh  constraint_store.hpp  constraint_store_index.hh  constraint_store_index.hpp  constraint_stores_iterator.hh  history.hh  logical_var.hpp  options.hpp  shared_obj.hh  statistics.hh  strategy.hpp  trace.hh  utils.hpp
